/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'org.springframework.boot' version '2.5.6'
    id 'pmd'
}

bootRun {
    jvmArgs = ['-Xverify:none','-Xms256m', '-Xmx512m']
}

pmd {
    ruleSets = ["${projectDir}/config/pmd-java.xml"]
}

gradle.taskGraph.whenReady { graph ->
    if (graph.hasTask(build)) {
        pmdMain.enabled = false
        pmdTest.enabled = false
        test.enabled = false
    }
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
    implementation 'org.javassist:javassist:3.28.0-GA'
    implementation 'org.hibernate:hibernate-validator:5.2.4.Final'
    implementation 'org.flywaydb:flyway-core:8.0.2'
    implementation 'org.modelmapper:modelmapper:2.4.4'
    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
    implementation 'com.univocity:univocity-parsers:2.8.4'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
    runtimeOnly 'org.xerial:sqlite-jdbc:3.32.3.3'
    runtimeOnly 'com.github.gwenn:sqlite-dialect:0.1.0'
    testImplementation 'org.hamcrest:hamcrest-library:1.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
}


test {
    useJUnitPlatform()    
}

group = 'com.kometsales'
version = '0.0.1-SNAPSHOT'
description = 'take-home-challenge-java'
java.sourceCompatibility = JavaVersion.VERSION_16

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
targetCompatibility = JavaVersion.VERSION_16
